alert item align fix

--- a/front/src/app/components/common/alert/index.less
+++ b/front/src/app/components/common/alert/index.less
@@ -32,6 +32,8 @@
     }
 
     &__message {
+        display: flex;
+        justify-content: center;
     }
 
     & &__cross {
@@ -52,5 +54,9 @@
             outline: none;
             border-color: @color-border;
         }
+    }
+
+    &__hash {
+        margin: 0 10px;
     }
 }
