--- a/front/src/app/components/layouts/app/index.less
+++ b/front/src/app/components/layouts/app/index.less
@@ -49,7 +49,7 @@
         .sonm-app-row;
     }
 
-    &--confirmation {
+    &--confirmation-bg {
         background: linear-gradient(90deg, white 50%, @color-gray-bg 50%);
     }
 }
